--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "date-fns": "^2.22.1",
     "emailjs-com": "^2.6.4",
+    "html-react-parser": "^1.2.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-nice-dates": "^3.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2",
     "react-scroll-to-top": "^1.0.5",
     "smooth-scroll": "^16.1.3"
