--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "landingpage-react-template",
   "private": true,
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^15.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "contentful": "^8.5.0",
+    "axios": "^0.21.4",
+    "contentful": "^8.5.8",
+    "cors": "^2.8.5",
     "date-fns": "^2.22.1",
     "emailjs-com": "^2.6.4",
     "html-react-parser": "^1.2.7",
