--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.2",
     "react-scroll-to-top": "^1.0.5",
-    "smooth-scroll": "^16.1.3"
+    "smooth-scroll": "^16.1.3",
+    "uikit": "^3.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
